--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,42 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-  background-color: #1d0900;
-  color: #ed6c6d;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
 }
 
-code {
-  color: #1d0900;
-  font-weight: bold;
-  background-color: #ed6c6d;
-  padding: 0.3rem;
-  border-radius: 3px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.rsw-container {
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.rsw-item {
-  text-align: center;
-  padding: 1rem;
+.App-link {
+  color: #61dafb;
 }
 
-.rsw-item > img {
-  max-width: 80vw;
-  margin: 0 auto;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.rsw-container::after {
-  content: '';
-  height: 15vh;
+button {
+  font-size: calc(10px + 2vmin);
 }
-
