--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./img//bobbackground.jpg");
+  background-image: url("./img/maxresdefault.jpeg");
 }
 
 code {
