--- a/src/components/sliderartist.css
+++ b/src/components/sliderartist.css
@@ -1,3 +1,7 @@
+.slider {
+  display: flex;
+  flex-direction: column;
+}
 .label {
   font-family: Scada;
   font-style: normal;
@@ -5,9 +9,9 @@
 
 .label-img {
   position: absolute;
-  border-radius: 30px;
+  /* border-radius: 30px;
   height: 214px;
-  top: 20px;
+  top: 20px; */
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.25));
 }
 .label-img,
@@ -15,7 +19,7 @@
 .label-album,
 .label-name {
   width: 214px;
-  left: 14.48px;
+  /* left: 14.48px; */
 }
 
 .label-title,
