--- a/src/components/sliderartist.css
+++ b/src/components/sliderartist.css
@@ -28,6 +28,7 @@
   z-index: 1;
   position: absolute;
   color: #ffffff;
+  text-shadow: 0.1em 0.1em 0.2em black;
 }
 .label-title,
 .label-name {
@@ -63,4 +64,9 @@
 }
 
 .loading {
+}
+
+.next,
+.previous {
+  text-shadow: rgba(0, 0, 0, 0.25);
 }
