--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,135 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.AppBody {
+  height: 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  
+}
+
+ .GridComponent {
+  height: 100%;
+  width: 100%;
+  margin: 0 5%;
+
+}
+
+/* -- GrillePrincipale -- */ 
+
+.section1 {
+  margin-top: 10%;
+  width: 100%;
+  height: 400px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.08);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.section2 {
+  margin-top: 10%;
+  width: 100%;
+  height: 100%;
+}
+
+.PlaylistComponent {
+  width: 100%;
+  height: 550px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.08);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.vignettes {
+  margin-top: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.vignette1 {
+    width: 48%;
+    height: 250px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.08);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.vignette2 {
+  width: 48%;
+  height: 250px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.08);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.MixtapesComponent {
+  margin-top: 10%;
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.08);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.ContactForm {
+  margin-top: 10%;
+  margin-bottom: 10%;
+  width: 100%;
+  height: 650px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.08);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+
+
+@media screen and (min-width: 900px) {
+  .GridComponent {
+    margin: 0 2%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-button {
-  font-size: calc(10px + 2vmin);
+  .section1 {
+    margin-top: 2%;
+  }
+
+  .section2 {
+    margin: 0;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .PlaylistComponent {
+    width: 50%;
+    height: 700px;
+  }
+
+  .section2Left {
+    width: 48%;
+  }
+
+  .vignettes {
+    margin: 0;
+  }
+
+  .vignette1 {
+    height: 315px;
+  }
+  .vignette2 {
+    height: 315px;
+  }
+
+  .MixtapesComponent {
+    margin-top: 35px;
+    height: 350px;
+  }
+
+  .ContactForm {
+    margin-top: 2%;
+    height: 360px;
+  }
+
 }
