--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,18 @@
 @tailwind utilities;
 
 
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color:rgba(97, 96, 96, 0.781);
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: url(src/img/BackGrounds/BackGround1.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
 
 
 
