--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-
-
 .AppBody {
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  position: fixed;
   
 }
 
@@ -35,6 +34,7 @@
 .PlaylistComponent {
   width: 100%;
   height: 550px;
+  padding: 20px;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.08);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
@@ -56,13 +56,7 @@
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
 }
 
-.vignette2 {
-  width: 48%;
-  height: 250px;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.08);
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
-}
+
 
 .MixtapesComponent {
   margin-top: 10%;
