--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,16 +15,17 @@
   font-family: 'Scada', sans-serif;
   font-style: normal;
   font-weight: bold;
-  font-size: 45px;
+  font-size: 40px;
   line-height: 56px;
   color: #ffffff;
 }
 
 .uploadLink {
   margin-right: 5%;
+  margin-bottom: 2%;
   display: flex;
-  justify-content: space-between;
-  font-family: Scada;
+  justify-content: flex-end;
+  font-family: 'Scada', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -33,7 +34,7 @@
 }
 
 .uploadLink img {
-  margin-left: 10%;
+  margin-left: 2%;
 }
 
 /* - SearchBar - */
@@ -48,7 +49,7 @@
   color: white;
   font-family: 'Cuprum', sans-serif;
   width: 100%;
-  height: 40px;
+  height: 30px;
   padding: 2% 5%;
   background: rgba(255, 255, 255, 0.08);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
